# commerce-recommandation

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README_langchain.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  langchain_rag.py  products.py  reviews.py
backend/app/core/: auth.py  config.py  database.py  opensearch_client.py  redis_client.py  vertex_client.py
backend/app/schemas/: auth.py  member.py  product.py  recommendation.py  review.py
backend/app/services/: langchain_service.py  member_service.py  product_service.py  review_service.py
backend/scripts/: README_opensearch.md  README_review_embedding.md  members_mig.py  opensearch_migration.py  opensearch_setup.py  orders_mig.py  product_statistics_mig.py  products_mig.py  review_embedding_batch.py  reviews_mig.py  run_opensearch_migration.sh  run_review_embedding.sh
config/: development.env
crawler/: README.md  crawler.py  detail_crawler.py  requirements.txt  review_crawler.py
frontend/: index.html  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  NativeChatbot.tsx  SearchBar.tsx  StreamlitChatbot.tsx
frontend/src/pages/: AdminPage.tsx  HomePage.tsx  ProductDetailPage.tsx  ProductsPage.tsx  RecommendationsPage.tsx
frontend/src/services/: auth.ts  product.ts  review.ts
recommendation-engine/: Dockerfile  requirements.txt
recommendation-engine/src/: __init__.py  main.py
scripts/: README.md  setup-dev.sh  setup-mysql.sh  start-all.sh  start-chatbot.sh  stop-all.sh
src/: App.tsx  product_detail_crawler.py  simple_detail_crawler.py
src/components/: CategoryTabs.tsx  LoginModal.tsx  SearchBar.tsx
src/pages/: CategoryPage.tsx  HomePage.tsx  ProductDetailPage.tsx  SearchPage.tsx
streamlit-chatbot/: README.md  app.py  pyproject.toml  requirements.txt
