[tool.poetry]
name = "commerce-recommendation-backend"
version = "0.1.0"
description = "Commerce Recommendation System Backend API"
authors = ["NHN Commerce <admin@nhn-commerce.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
opensearch-py = "^2.4.0"
redis = "^5.0.1"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"
alembic = "^1.13.1"
httpx = "^0.25.2"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
# ML packages - optional for basic operation
# numpy = "^1.26.0"
# pandas = "^2.1.0"
# scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000" 