[tool.poetry]
name = "commerce-recommendation-chatbot"
version = "0.1.0"
description = "Streamlit-based AI Chatbot for Commerce Recommendation System"
authors = ["NHN Commerce <admin@nhn-commerce.com>"]
packages = [{include = "app.py"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
# openai = "^1.3.0"  # AI 모델 API 사용시 추가
# langchain = "^0.1.0"  # LangChain 사용시 추가
# pandas = "^2.0.0"  # 데이터 처리시 추가
# numpy = "^1.24.0"  # 수치 계산시 추가
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.scripts]
# Poetry scripts는 Python 함수를 호출해야 함
# 직접 실행: poetry run streamlit run app.py --server.port 8501 --server.address 0.0.0.0 